# apiragfs

./: .gitignore  ANALISE_COMPLETA_CHAT_SESSIONS.md  ANALISE_SISTEMA_2025-11-29.md  AUTH-FIX.md  App.tsx  App_old.tsx  BOTOES_DISABLED_IMPLEMENTADO.md  CHAT_DETECTION_FIX.md  CHAT_TESTS_SUMMARY.md  CLAUDE.md  CORRECAO_LOGIN.md  CORRECAO_LOGIN_QUOTA.md  DASHBOARD_BUTTONS_DISABLED.md  Dockerfile  FIX_BULK_DELETE.md  FIX_COMPLETE_NEW_CHAT.md  FIX_ENDPOINT_404.md  FIX_FINAL_RAG_STORE_PRESERVATION.md  FIX_HISTORICO_CONVERSAS.md  FIX_NEW_CHAT_BUTTON.md  FIX_NEW_CHAT_RAG_STORE_VALIDATION.md  HISTORICO-CHAT-FIX.md  MINIO.md  Makefile  NOVO_SISTEMA_CHAT.md  README.md  SETUP.md  SISTEMA_COMPLETO_PRONTO.md  STORE_COUNT_UPDATE_FIX.md  TESTE-CHAT.md  VALIDACAO_PROATIVA_IMPLEMENTADA.md  docker-compose.yml  index.css  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test_chat_error.sh  test_chat_flow.sh  (+9 more)
backend/: .env  .env.example  Dockerfile  pyproject.toml  test_file_search.py
backend/app/: main.py
backend/app/config/: __init__.py  database.py  minio.py  redis.py  (+1 more)
backend/database/: fix_existing_documents.sql  fix_rag_store_names.sql  init.sql  migration_add_auth.sql  migration_add_departments.sql  migration_add_metadata.sql  migration_add_progress.sql  migration_add_rag_store.sql  migration_add_settings.sql  migration_documents_user_id_uuid.sql  migration_remove_document_fields.sql  migration_store_permissions.sql
backend/scripts/: check_orphaned_docs.sh  cleanup_orphaned_sessions.py  sync_rag_stores.py  test_password.py  validate_store.py
(+108 files in other folders)
